--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,12 @@
     padding: 0;
     margin: 0;
 }
-
+/* establish the bg color for full page*/
 body {
     background-color: #d9dcd6;
 }
 
+/* main style specs for header section in the body */
 .main-header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,15 +16,18 @@ body {
     color: #ffffff;
 }
 
+/* establishing the Main heading text color and position*/
 .main-header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/* specs for span text which has a different font color from the reast of the header*/
 .main-header h1 .seo {
     color: #d9dcd6;
 }
 
+/*specs for the nav bar*/
 .main-header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,24 +36,26 @@ body {
     font-size: 20px;
 }
 
+/* strip off default specs for unordered list*/
 .main-header nav ul {
     list-style-type: none;
 }
 
+/*allows the navigation links to be side by side*/
 .main-header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*all anchors in this page have the same color*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*font size for paragraph text is fixed at 16px*/
 p {
     font-size: 16px;
 }
-
+/*the main image right under the header*/
 .hero {
     height: 800px;
     width: 100%;
@@ -58,17 +64,17 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*this class is used for the content section and establishes placement of content within*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/*this class is used for the content section and establishes placement of content within*/
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/*specs for section on right hand side*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -79,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/*each smaller section within the benefits section will have this margin and color*/
 .benefits div {
     margin-bottom: 32px;
     color: #ffffff;
@@ -96,6 +102,7 @@ p {
     max-width: 150px;
 }
 
+/*specs for content section on the left hand side*/
 .content {
     width: 75%;
     display: inline-block;
@@ -119,7 +126,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*footer*/
 footer {
     padding: 30px;
     clear: both;
